Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/Apex_Test_Result__c.object-meta.xml
<CustomObject>
    <description>This object stores the results of scheduled Apex Tests executed through Copado Deployer.</description>
    <label>Apex Test Result</label>
    <nameField>
        <displayFormat>Test-{0000}</displayFormat>
        <label>Apex Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>