Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>