Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/Failures__c.field-meta.xml
<CustomField>
    <fullName>Failures__c</fullName>
    <label>Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>