Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <label>Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Apex Test Results</relationshipLabel>
    <relationshipName>Apex_Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>