Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>