Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/Successes__c.field-meta.xml
<CustomField>
    <fullName>Successes__c</fullName>
    <formula>if(Tests_run__c==0,0,(Tests_run__c-Failures__c)/Tests_run__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successes (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>