Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/Tests_run__c.field-meta.xml
<CustomField>
    <fullName>Tests_run__c</fullName>
    <label>Tests run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>