Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/Total_time__c.field-meta.xml
<CustomField>
    <fullName>Total_time__c</fullName>
    <inlineHelpText>This is the total time taken to run the Apex Tests</inlineHelpText>
    <label>Total time (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>