Dummy_Package_for_scratch_org/main/default/objects/Apex_Test_Result__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Apex Test Results</relationshipLabel>
    <relationshipName>Apex_Test_Results</relationshipName>
    <type>Lookup</type>
</CustomField>